--- a/examples/network_visibility/Cargo.toml
+++ b/examples/network_visibility/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "interest_management_new"
+name = "network_visibility"
 version = "0.1.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
@@ -37,22 +37,13 @@ udp = [
 
 [dependencies]
 lightyear = { workspace = true, features = [
-  "interpolation",
-  "prediction",
-  "replication",
-  "leafwing",
-  "input_native", # Added based on simple_box_new
+  "input_native",
 ] }
 lightyear_examples_common_new.workspace = true
 
 leafwing-input-manager.workspace = true
 serde.workspace = true
-anyhow.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
 bevy.workspace = true
-rand.workspace = true
-metrics-exporter-prometheus = { workspace = true, optional = true }
 
 [lints]
 workspace = true
