--- a/examples/fps/Cargo.toml
+++ b/examples/fps/Cargo.toml
@@ -47,14 +47,13 @@ lightyear = { workspace = true, features = [
   "input_native", # Added based on simple_box_new
 ] }
 lightyear_examples_common.workspace = true
+lightyear_frame_interpolation.workspace = true
 lightyear_avian = { workspace = true, features = ["2d", "lag_compensation"] }
 
 leafwing-input-manager.workspace = true
 serde.workspace = true
 tracing.workspace = true
-tracing-subscriber.workspace = true
 bevy.workspace = true
-metrics-exporter-prometheus = { workspace = true, optional = true }
 
 [lints]
 workspace = true
