--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -26,7 +26,7 @@ std = [
 
 [dependencies]
 lightyear = { workspace = true, features = [
-    "client", "server", "crossbeam", "netcode", "input_native", "prediction", "replication"
+    "client", "server", "crossbeam", "netcode", "input_native", "interpolation", "prediction", "replication"
 ]}
 lightyear_macros.workspace = true
 lightyear_utils.workspace = true
