--- a/lightyear_webtransport/Cargo.toml
+++ b/lightyear_webtransport/Cargo.toml
@@ -31,6 +31,7 @@ async-compat.workspace = true
 futures.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+thiserror.workspace = true
 
 
 # serde
