Add webtransport using aeronet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,11 +92,13 @@ lightyear_examples_common = { path = "./examples/common", version = "0.19.0", de
 
 # utils
 anyhow = { version = "1.0.75", features = [] }
+base64 = "0.22.1"
 clap = { version = "4.5.4", features = ["derive"] }
 chrono = "0.4.38"
 cfg-if = "1.0"
+derive_more = "2.0.1"
 enum_dispatch = "0.3"
-governor = "0.8.1"
+governor = "0.10"
 hashbrown = "0.15"
 indexmap = { version = "2.9.0", default-features = false }
 nonzero_ext = "0.3.0"
@@ -123,7 +125,6 @@ self_cell = "1.0"
 serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
 
 # netcode
-
 chacha20poly1305 = { version = "0.10" }
 
 
@@ -137,7 +138,6 @@ tracing-subscriber = { version = "0.3.17", features = [
 ] }
 
 # server
-
 crossbeam-channel = { version = "0.5.13", features = [] }
 
 # metrics
@@ -151,13 +151,13 @@ metrics-exporter-prometheus = { version = "0.17", default-features = false, feat
 
 
 # compression
-
 lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
 
 # WebSocket
 futures-util = "0.3.30"
 
 # transport
+aeronet_io = "0.14.0"
 # we don't need any tokio features, we use only use the tokio channels
 tokio = { version = "1.44", features = [
   "sync",
@@ -167,19 +167,19 @@ futures = "0.3.30"
 async-compat = "0.2.3"
 async-channel = "2.2.0"
 
-# Non-WASM thingjs
+# Non-WASM things
 steamworks = "0.11"
-wtransport = { version = "0.6.1", features = [
-  "quinn",
-  "self-signed",
-  "dangerous-configuration",
-] }
+spki                 = { version = "0.7.3" }
+xwt-wtransport       = { version = "0.13.2" }
+wtransport = { version = "0.6.1" }
 tokio-tungstenite = { version = "0.23.0", features = ["connect", "handshake"] }
+x509-cert            = { version = "0.2.5" }
 
 
 # WASM things
-
+gloo-timers          = { version = "0.3.0" }
 console_error_panic_hook = "0.1.7"
+js-sys               = { version = "0.3.70" }
 web-sys = { version = "0.3", features = [
   "Document",
   "WebTransport",
@@ -227,6 +227,12 @@ bevy = { version = "0.16", default-features = false, features = [
   "multi_threaded",
   "sysinfo_plugin",
 ] }
+bevy_app      = { version = "0.16.0", default-features = false }
+bevy_ecs      = { version = "0.16.0", default-features = false }
+bevy_platform = { version = "0.16.0", default-features = false }
+bevy_reflect  = { version = "0.16.0", default-features = false }
+bevy_time     = { version = "0.16.0", default-features = false }
+bevy_winit    = { version = "0.16.0", default-features = false }
 
 # input
 leafwing-input-manager = { version = "0.17", default-features = false, features = [
@@ -252,6 +258,9 @@ bevy_egui = { version = "0.34", default-features = false, features = [
 ] }
 bevy_metrics_dashboard = { version = "0.7", features = ["bevy_egui"]}
 egui_extras = "0.31"
+
+# documentation
+document-features    = { version = "0.2.11" }
 
 [workspace.lints.clippy]
 type_complexity = "allow"
