--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -51,6 +51,8 @@ lightyear = {"workspace" = true, features = [
   "interpolation",
   "prediction",
   "replication",
+  "webtransport",
+  "udp",
 ]}
 anyhow.workspace = true
 async-compat.workspace = true
