--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "3"
 members = [
   "lightyear",
+  "lightyear_aeronet",
   "lightyear_core",
   "lightyear_crossbeam",
   "lightyear_frame_interpolation",
@@ -62,6 +63,7 @@ debug = false
 
 
 [workspace.dependencies]
+lightyear_aeronet = { path = "./lightyear_aeronet", version = "0.19.0", default-features = false }
 lightyear_avian = { path = "./lightyear_avian", version = "0.19.0", default-features = false }
 lightyear_macros = { path = "./lightyear_macros", version = "0.19.0", default-features = false}
 lightyear_netcode = { path = "./lightyear_netcode", version = "0.19.0", default-features = false }
@@ -157,6 +159,7 @@ lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
 futures-util = "0.3.30"
 
 # transport
+aeronet_webtransport = "0.14.0"
 aeronet_io = "0.14.0"
 # we don't need any tokio features, we use only use the tokio channels
 tokio = { version = "1.44", features = [
