remove duplicate ServerLink/Server, make ClientOf a marker component instead of relationship

--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -53,6 +53,7 @@ lightyear = {"workspace" = true, features = [
   "replication",
   "webtransport",
   "webtransport_self_signed",
+  "webtransport_dangerous_configuration",
   "udp",
 ]}
 anyhow.workspace = true
