--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -35,6 +35,7 @@ prediction = []
 interpolation = []
 
 [dependencies]
+lightyear_link.workspace = true
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
