--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -48,17 +48,14 @@ udp = [
 
 [dependencies]
 lightyear = { "workspace" = true, features = [
+  "interpolation",
+  "prediction",
+  "replication",
   "input_native",
 ]}
 lightyear_examples_common.workspace = true
 serde.workspace = true
-anyhow.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
 bevy.workspace = true
-rand.workspace = true
-metrics-exporter-prometheus = { workspace = true, optional = true }
-bevy-inspector-egui = { workspace = true, optional = true }
 
 [lints]
 workspace = true
