add interpolation_delay, fix avian and prespawn

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -68,6 +68,7 @@ interpolation = [
   "dep:lightyear_interpolation",
   "dep:lightyear_replication",
   "lightyear_replication?/interpolation",
+  "lightyear_inputs?/interpolation",
 ]
 trace = []
 metrics = [
