--- a/lightyear_frame_interpolation/Cargo.toml
+++ b/lightyear_frame_interpolation/Cargo.toml
@@ -20,6 +20,7 @@ std = [
 lightyear_core.workspace = true
 lightyear_replication = {workspace = true, features = ["interpolation"]}
 lightyear_prediction.workspace = true
+lightyear_interpolation.workspace = true
 
 # utils
 tracing.workspace = true
