--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -31,15 +31,20 @@ server = [
     "lightyear_transport/server",
 ]
 metrics = []
+interpolation = [
+    "dep:lightyear_interpolation"
+]
 
 
 [dependencies]
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
 lightyear_sync.workspace = true
+lightyear_serde.workspace = true
 lightyear_messages.workspace = true
 lightyear_prediction.workspace = true
 lightyear_transport.workspace = true
+lightyear_interpolation = { workspace = true, optional = true}
 
 # utils
 tracing.workspace = true
