--- a/lightyear_avian/Cargo.toml
+++ b/lightyear_avian/Cargo.toml
@@ -16,13 +16,25 @@ publish = true
 
 [features]
 default = ["std"]
-std = ["lightyear/std"]
+std = [
+    "lightyear_prediction/std",
+    "lightyear_replication/std"
+]
 2d = ["dep:avian2d", "avian2d/2d"]
 3d = ["dep:avian3d", "avian3d/3d"]
-lag_compensation = []
+lag_compensation = [
+    "dep:lightyear_link",
+    "dep:lightyear_interpolation",
+]
 
 [dependencies]
 avian2d = { workspace = true, optional = true }
 avian3d = { workspace = true, optional = true }
-lightyear = { workspace = true, features = ["leafwing"] }
 bevy = { workspace = true }
+# TODO: gate these behind features?
+lightyear_core.workspace = true
+lightyear_link = { workspace = true, optional = true }
+lightyear_prediction.workspace = true
+lightyear_interpolation = { workspace = true, optional = true }
+lightyear_frame_interpolation.workspace = true
+lightyear_replication.workspace = true
