--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -40,9 +40,9 @@ interpolation = [
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
 lightyear_sync.workspace = true
-lightyear_serde.workspace = true
 lightyear_messages.workspace = true
 lightyear_prediction.workspace = true
+lightyear_replication.workspace = true
 lightyear_transport.workspace = true
 lightyear_interpolation = { workspace = true, optional = true}
 
