--- a/lightyear_messages/Cargo.toml
+++ b/lightyear_messages/Cargo.toml
@@ -30,7 +30,7 @@ lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
 lightyear_transport.workspace = true
-lightyear_connection = {workspace = true, optional = true}
+lightyear_connection.workspace = true
 
 # utils
 tracing.workspace = true
