small example fix

--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -44,6 +44,7 @@ lightyear_messages.workspace = true
 lightyear_prediction.workspace = true
 lightyear_replication.workspace = true
 lightyear_transport.workspace = true
+lightyear_link.workspace = true
 lightyear_interpolation = { workspace = true, optional = true}
 
 # utils
