--- a/demos/spaceships/Cargo.toml
+++ b/demos/spaceships/Cargo.toml
@@ -39,11 +39,11 @@ lightyear = { workspace = true, features = [
   "replication",
   "leafwing",
   "avian2d",
-  "input_native", # Added based on simple_box_new
 ] }
+lightyear_frame_interpolation.workspace = true
 lightyear_examples_common.workspace = true
-metrics-exporter-prometheus = { workspace = true, optional = true }
 leafwing-input-manager = { workspace = true, features = ["keyboard", "mouse"] }
+
 avian2d = { workspace = true, features = [
   "2d",
   "f32",
